package com.stockproject.experiment_service.auth.model;

public enum Role {
    USER,
    ADMIN
}
