package com.stockproject.experiment_service.model;

public enum SourceType {
    FILE,
    URL,
    YAHOO,
    ALPHAVANTAGE
}